# self_framework

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.sh  main.cpp  readme.md
cmake/: CMakeLists.txt  dependency_protobuf.cmake
cmake_dependency/: External_FFmpeg.cmake  External_Glog.cmake  External_Gtest.cmake  External_Opencv.cmake  External_Protobuf.cmake  External_SuperBuild.cmake  Package.cmake  SuperBuild.cmake  fetchContest_gtest_example  package.cmake
modules/: idst_netinfer.pb.cc  idst_netinfer.pb.h  idst_netinfer.proto  models.cfg
modules/config_file/: cloud_models.cfg  config_person_mobile.json  models.cfg  tracker_config.json
modules/proto/: parser.pb.cc  parser.pb.h  parser.proto
modules/scripts/: format_source_code.sh
src/cncv_interface/: CMakeLists.txt  cncv_openingtime_interface.cc  cncv_openingtime_interface.h  cncv_persondetect_interface.cc  cncv_persondetect_interface.h
src/decoding/: yolov5_decoding.cc  yolov5_decoding.h
src/deviceengine/: CMakeLists.txt  abstractengine.cc  abstractengine.h  device_register.cc  device_register.h
src/deviceengine/amlogicengine/: CMakeLists.txt  amlogical_engine_infer.cc  amlogical_engine_infer.h  fcos_engine_infer.cc  fcos_engine_infer.h  reid_engine_infer.cc  reid_engine_infer.h
src/deviceengine/amlogicengine/vnn_common/: CMakeLists.txt  vnn_detectionsimply.c  vnn_model.c  vnn_model.h  vnn_post_process.c  vnn_yolo.c
src/deviceengine/trtengine/: CMakeLists.txt  trt_engine.cc  trt_engine.h  trt_engine_infer.cc  trt_engine_infer.h  trt_fcos_engine.h  trt_reid_engine.cc
src/parse/: CMakeLists.txt  parse_config.cc  parse_config.h  parse_json.cc  parse_json.h  parse_video.cc  parse_video.h
src/pipeline/: CMakeLists.txt  face_decorator_stage.cc  face_decorator_stage.h  fcos_decorator_stage.cc  fcos_decorator_stage.h  pipeline.cc  pipeline.h  register_stage.h  stage_register.h
src/pipeline/decorator_stage/: face_decorator_stage.cc  face_decorator_stage.h  fcos_decorator_stage.cc  fcos_decorator_stage.h  reid_decorator_stage.cc  reid_decorator_stage.h  tracker_decorator_stage.cc  tracker_decorator_stage.h  upload_decorator_stage.cc  upload_decorator_stage.h  yolo_decorator_stage.cc  yolo_decorator_stage.h
src/pipeline/deviceengine/: CMakeLists.txt  abstractengine.cc  abstractengine.h  device_register.cc  device_register.h
src/pipeline/deviceengine/amlogicengine/: amlogical_engine_infer.cc  amlogical_engine_infer.h  fcos_engine_infer.cc  fcos_engine_infer.h  reid_engine_infer.cc  reid_engine_infer.h  yolo_engine_infer.cc  yolo_engine_infer.h
src/pipeline/deviceengine/amlogicengine/vnn_common/: CMakeLists.txt  vnn_bsetsim.c  vnn_detectionsimply.c  vnn_edge256pedreid.c  vnn_global.h  vnn_model.c  vnn_model.h  vnn_post_process.c  vnn_post_process.h  vnn_pre_process.c  vnn_pre_process.h  vnn_yolov5sim.c
src/pipeline/deviceengine/trtengine/: trt_engine.cc  trt_engine.h  trt_fcos_engine.cc  trt_fcos_engine.h  trt_reid_engine.cc  trt_reid_engine.h
src/utils/: arithmetical_utils.h  base.h  circlebuffer.h  common_struct.h  errorcode.h
test/: CMakeLists.txt  test_main.cpp
test/st/: common_test.cpp
tests/: CMakeLists.txt  common_test.cc  common_test.h
tests/st/: common_test.cc  st_test.cc
tests/ut/: unit_test.cc
